--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   font-family: "Poppins";
   font-weight: 300;
   color: #9C9C9C;
+  background-color: #0D0D11;
 }
 
 /* -------------------- */
@@ -11,9 +12,38 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: clip;
 }
+/* -------------------- */
 .page {
   flex: 1 1 auto;
+}
+/* -------------------- */
+.button {
+  display: inline-block;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #3D96F4;
+  border-radius: 50px;
+  letter-spacing: 2px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.43; /* 22px/14 */
+  padding: 16px 30px;
+  transition: background-color 0.5s ease 0s;
+}
+@media (max-width: 991.98px) {
+  .button{
+    padding: 14px 20px;
+  }
+}
+@media (max-width: 767.98px) {
+  .button{
+    padding: 10px 13px;
+  }
+}
+.button:hover {
+  background-color: #63a8f2;
 }
 /* -------------------- */
 [class*="__container"] {
@@ -21,8 +51,206 @@ body {
   margin: 0 auto;
   padding: 0px 15px;
 }
+/* --------header------------ */
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(13, 13, 17, 0.522);
+}
+.header__container {
+  display: flex;
+  column-gap: 35px;
+  align-items: center;
+  min-height: 116px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.header__logo {
+
+}
+.header__menu {
+  flex: 1 1 auto;
+}
 /* -------------------- */
+.menu {}
+.menu__body{
+
+}
+.menu__icon {
+}
+.menu__list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 3px;
+  justify-content: flex-end;
+  column-gap: 35px;
+}
+.menu__item {
+}
+.menu__link {
+  display: block;
+  font-size: 16px;
+  color: #FFFFFF;
+  line-height: 1.62; /* 26px/16 */
+}
+.menu__link:hover{
+  text-decoration: underline;
+}
 /* -------------------- */
+.header__cart {
+}
+.cart-header {
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+}
+.cart-header:hover .cart-header__text{
+  text-decoration: underline;
+}
+.cart-header__text {
+  font-size: 18px;
+  line-height: 1.55; /* 28px/18 */
+}
+.cart-header__quant {
+  width: 30px;
+  height: 30px;
+  background: rgba(129, 129, 139, 0.3);
+  border-radius: 29.9375px;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__button {
+  flex: 0 0 auto;
+}
+.icon-menu {
+  display: none;
+}
+.header__logo,
+.header__cart,
+.header__button {
+  position: relative;
+  z-index: 5;
+}
+/* -------------------- */
+@media (max-width: 991.98px) {
+  .header__container,
+  .menu__list {
+    column-gap: 23px;
+  }
+  .header__container {
+    min-height: 90px;
+  }
+}
+@media (max-width: 767.98px) {
+  .header__container,
+  .menu__list{
+    column-gap: 15px;
+  }
+  .icon-menu {
+    display: block;
+    flex: 0 0 30px;
+    height: 18px;
+    position: relative;
+    z-index: 5;
+  }
+  .icon-menu span,
+  .icon-menu::before,
+  .icon-menu::after {
+    content: "";
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #FFFFFF;
+    transition: all 0.3s ease 0.3s;
+  }
+  .icon-menu::before {
+    top: 0;
+  }
+  .icon-menu::after {
+    bottom: 0;
+  }
+  .icon-menu span {
+    top: 45%;
+  }
+  .menu-open .icon-menu span {
+    width: 0;
+  }
+  .menu-open .icon-menu::before {
+    top: 45%;
+    transform: rotate(-45deg);
+  }
+  .menu-open .icon-menu::after {
+    bottom: 45%;
+    transform: rotate(45deg);
+  }
+
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    left: -100%;
+    top: 0;
+    padding: 100px 15px 30px 15px;
+    overflow: auto;
+    transition: left 0.3s ease 0.3s;
+  }
+  .menu__body::before {
+    content: "";
+    width: 100%;
+    position: fixed;
+    left: -100%;
+    top: 0;
+    height: 70px;
+    background-color: #000;
+    z-index: 2;
+    transition: left 0.3s ease 0.3s;
+  }
+  .menu__list {
+    row-gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .menu__link {
+    font-size: 32px;
+  }
+  .header__container{
+    min-height: 70px;
+  }
+}
+
+.menu-open .menu__body,
+.menu-open .menu__body::before {
+  left: 0;
+}
+
+@media (max-width: 560px) {
+  .header__logo {
+    flex: 0 0 42px;
+    width: 42px;
+    overflow: hidden;
+  }
+  .cart-header__text {
+    display: none;
+  }
+  .cart-header__quant {
+    width: 35px;
+    height: 40px;
+    border-radius: 0;
+    padding-top: 5px;
+    padding-left: 1px;
+    background: url(/Growfy/img/icons/cart_dark.svg) center / auto 100% no-repeat;
+  }
+
+}
 /* -------------------- */
 /* -------------------- */
 /* -------------------- */
